--- a/css/default.css
+++ b/css/default.css
@@ -107,6 +107,22 @@ html
 	border: 1px solid white;
 }
 
+#tiles div.fadeIn
+{
+	transition: background-color .05s linear;
+	-moz-transition: background-color .05s linear;
+	-webkit-transition: background-color .05s linear;
+	-o-transition: background-color .05s linear;
+}
+
+#tiles div.fadeOut
+{
+	transition: background-color 1s linear;
+	-moz-transition: background-color 1s linear;
+	-webkit-transition: background-color 1s linear;
+	-o-transition: background-color 1s linear;
+}
+
 .row
 {
   width: 100%;
@@ -216,4 +232,45 @@ html
 .flex-item
 {
 	flex-shrink: 1;
+}
+
+.slidecontainer {
+    width: 100%; /* Width of the outside container */
+	margin: 2px auto;
+}
+
+/* The slider itself */
+.slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%; /* Full-width */
+    height: 15px; /* Specified height */
+    background: #d3d3d3; /* Grey background */
+    outline: none; /* Remove outline */
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+}
+
+/* Mouse-over effects */
+.slider:hover {
+    opacity: 1; /* Fully shown on mouse-over */
+}
+
+/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    background: #4CAF50; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+	border-radius: 50%;
+}
+
+.slider::-moz-range-thumb {
+    width: 25px; /* Set a specific slider handle width */
+    height: 25px; /* Slider handle height */
+    background: #4CAF50; /* Green background */
+    cursor: pointer; /* Cursor on hover */
 }
