--- a/css/default.css
+++ b/css/default.css
@@ -197,10 +197,19 @@ html
 	margin: 3px 3px 3px 3px;
 }
 
+#undoButton
+{
+	position: absolute;
+	bottom: 25px;
+	left: 0px;
+	width: 143px;
+	margin: 3px 3px 3px 3px;
+}
+
 #currentTurnLabel
 {
 	position: absolute;
-	bottom: 50px;
+	bottom: 75px;
 	left: 0px;
 	width: 143px;
 }
@@ -208,7 +217,7 @@ html
 #moveCounter
 {
 	position: absolute;
-	bottom: 25px;
+	bottom: 50px;
 	left: 0px;
 	width: 143px;
 }
@@ -216,7 +225,7 @@ html
 #moveCounterLabel
 {
 	position: absolute;
-	bottom: 30px;
+	bottom: 55px;
 	left: 0px;
 	width: 143px;
 }
