--- a/css/default.css
+++ b/css/default.css
@@ -3,90 +3,9 @@ html
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-.red
-{
-	background-color: red !important;
-	border-radius: 50%;
-}
-
-.pink
-{
-	background-color: pink;
-}
-
-.pink:hover
-{
-	background-color: lightcoral;
-}
-
-.blue
-{
-	background-color: blue !important;
-	border-radius: 50%;
-	/* transform: rotate(45deg);
-	transform-origin: 0 100%; */
-}
-
-.lightblue
-{
-	background-color: lightblue;
-}
-
-.lightblue:hover
-{
-	background-color: dodgerblue;
-}
-
-.green
-{
-	background-color: green !important;
-	border-radius: 50%;
-}
-
-.lightgreen
-{
-	background-color: palegreen;
-}
-
-.lightgreen:hover
-{
-	background-color: lightgreen;
-}
-
-.multipartisan
-{
-	background-color: #EEEEEE;
-}
-
-.multipartisan:hover
-{
-	background-color: lightgrey;
-}
-
-.red-voter
-{
-	background-color: red;
-	border-radius: 50%;
-}
-
-#red-votercount
-{
-	color: red;
-}
-
-#blue-votercount
-{
-	color: blue;
-}
-
-#green-votercount
-{
-	color: green;
-}
-
 #representativesCount
 {
-	width: 150px;
+	width: 200px;
 	text-align: center;
 }
 
@@ -95,11 +14,24 @@ html
 	font-weight: bold;
 	/* margin-left: 50px; */
 }
+#representativesCount table {
+	width: 100%;
+}
 
-#representativesCount > h1
+#representativesCount table tr {
+	background-color: #666;
+}
+
+#representativesCount table td {
+	text-align: center;
+	width: 100px;
+}
+
+#representativesCount h1
 {
-	margin: 0px;
-	padding: 0px;
+	/* margin: 0px;
+	padding: 0px; */
+	display: inline;
 }
 
 #tiles > section > div
@@ -110,6 +42,7 @@ html
 
 .voter {
 	margin: 3px 0 0 3px;
+	border-radius: 50%;
 }
 
 #tiles div.fadeIn
@@ -203,7 +136,7 @@ html
 
 #mainMenuButton
 {
-	width: 143px;
+	width: 193px;
 	margin: 3px 3px 20px 3px;
 }
 
@@ -212,7 +145,7 @@ html
 	position: absolute;
 	bottom: 0px;
 	left: 0px;
-	width: 143px;
+	width: 193px;
 	margin: 3px 3px 3px 3px;
 }
 
@@ -221,7 +154,7 @@ html
 	position: absolute;
 	bottom: 25px;
 	left: 0px;
-	width: 143px;
+	width: 193px;
 	margin: 3px 3px 3px 3px;
 }
 
@@ -230,7 +163,7 @@ html
 	position: absolute;
 	bottom: 75px;
 	left: 0px;
-	width: 143px;
+	width: 193px;
 }
 
 #moveCounter
@@ -238,7 +171,7 @@ html
 	position: absolute;
 	bottom: 50px;
 	left: 0px;
-	width: 143px;
+	width: 193px;
 }
 
 #moveCounterLabel
@@ -246,7 +179,7 @@ html
 	position: absolute;
 	bottom: 55px;
 	left: 0px;
-	width: 143px;
+	width: 193px;
 }
 
 #canvas
@@ -259,7 +192,7 @@ html
     position:relative;
 	text-align: center;
 	background-color: lightgrey;
-	width: 150px;
+	width: 200px;
 }
 
 .flex-item
@@ -335,19 +268,3 @@ html
 	border-right-width: 3px !important;
 	padding-right: 0px !important;
 }
-
-/* .outline.topBorder {
-	margin-top: 3px !important;
-}
-
-.outline.bottomBorder {
-	margin-bottom: 3px !important;
-}
-
-.outline.leftBorder {
-	margin-left: 3px !important;
-}
-
-.outline.rightBorder {
-	margin-right: 3px !important;
-} */
